Standardize component layout by ensuring inputs and containers fill available width and align correctly

--- a/packages/ui/src/components/editor/Field/Field.module.scss
+++ b/packages/ui/src/components/editor/Field/Field.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  align-items: flex-start;
 
   &__label {
     font-size: 12px;
@@ -41,6 +42,10 @@
     width: 100%;
   }
 
+  input[type='text'] {
+    width: 100%;
+  }
+
   input[type='range'] {
     padding: 0;
     &:focus {
@@ -59,6 +64,7 @@
     font-size: var(--font-size-13px);
     padding: var(--padding-5px) var(--padding-6px);
     border: none;
+    width: 100%;
 
     &:focus {
       outline: 1px solid var(--vscode-focusBorder);
